# pytorch-for-tenseal

./: .gitignore  LICENSE  Pipfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
models/Framingham/: enc_logreg.py  logreg.py
models/MNIST/: cnn.py  enc_cnn.py
parameters/MNIST/: enc-trained-model.pth  model-enc.pth  model.pth  original-model.pth  trained-model.pth
parameters/framingham/: enc-trained-model.pth  model-enc.pth  model.pth  original-model.pth  trained-model.pth
src/torchseal/: __init__.py  example.py
tests/: conv2d.py  linear.py  main.py  mnist-test.py  mnist_test.py  mnist_test_enc.py  mnist_train.py  mnist_train_enc.py
tests/Framingham/: dataloader.py  enc_logreg.py  logreg.py  main.py  test.py  test_enc.py  train.py  train_enc.py
tests/MNIST/: cnn.py  enc_cnn.py  main.py  mnist_test.py  mnist_test_enc.py  mnist_train.py  mnist_train_enc.py  test.py  test_enc.py  train.py  train_enc.py
tests/Numpy/: least-squares.py  minimax.py  toeplitz.py
tests/PyTorch/: average.py  fold.py  maximum.py  toeplitz.py
tests/TenSEAL/: addition.py  im2col.py  im2col_encoding.py  linear.py  linear_with_batch.py  minibatch.py  toeplitz.py  toeplitz_with_batch.py
tests/function/: test_binary_cross_entropy.py
tests/nn/: test_average2d.py  test_conv2d.py  test_cross_entropy.py  test_linear.py  test_max2d.py  test_mse.py  test_relu.py  test_sigmoid.py  test_softmax.py  test_square.py  test_tanh.py
tests/optim/: test_sgd.py
tests/optimizer/: test_sgd.py
tests/torch/: block_identity_matrix.py  test_convmtx2.py  test_loss.py  test_optimizer.py
(+66 files in other folders)
